--- a/AngularSolution/src/index.html
+++ b/AngularSolution/src/index.html
@@ -8,6 +8,20 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <button class="btn btn-primary">Reactive form</button>
+        </div>
+        <div >
+          <button class="btn btn-primary">Template Driven</button>
+        </div>
+        
+      </div>
+    </div>
+  
   <app-root></app-root>
 </body>
 </html>
