--- a/AngularSolution/src/index.html
+++ b/AngularSolution/src/index.html
@@ -10,13 +10,11 @@
 <body>
 
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          <button class="btn btn-primary">Reactive form</button>
+    <div>
+          <button>Reactive form</button>
         </div>
-        <div >
-          <button class="btn btn-primary">Template Driven</button>
+        <div>
+          <button>Template Driven</button>
         </div>
         
       </div>
