addded page refernces

--- a/AngularSolution/src/index.html
+++ b/AngularSolution/src/index.html
@@ -1,25 +1,50 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+ ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #333;
+}
+  </style>
   <meta charset="utf-8">
   <title>AngularSolution</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="width: 80%;">
 
-
-    <div>
-          <button>Reactive form</button>
-        </div>
-        <div>
-          <button>Template Driven</button>
-        </div>
+    <ul >
+       <li> 
+          <a href="reactiveform">Reactive form</a>
+        </li>
+        <li>
+          <a href="templatedriven">Template Driven</a>
+        </li>
         
-      </div>
-    </div>
+    </ul>
+    
+    <app-root></app-root>
+  </body>
+  </html>
   
-  <app-root></app-root>
-</body>
-</html>
