adding modal popup feature

--- a/AngularSolution/src/index.html
+++ b/AngularSolution/src/index.html
@@ -39,7 +39,7 @@ li a:hover {
           <a href="reactiveform">Reactive form</a>
         </li>
         <li>
-          <a href="templatedriven">Template Driven</a>
+          <a href="templatedriven">Test Modal popup</a>
         </li>
         
     </ul>
